05-helm/labs/01-without-helm/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: phico/backend:2.0
          imagePullPolicy: Always
          name: backend
          ports:
            - name: backend
              containerPort: 3000
