05-helm/labs/01-without-helm/mongodb.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongodb

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo

          ports:
            - name: mongodb
              containerPort: 27017

          volumeMounts:
            - name: mongodb-volume
              mountPath: /data/db

      volumes:
        - name: mongodb-volume
          persistentVolumeClaim:
            claimName: mongodb-pvc
